src/objects/Accounting_Softwareplan__c.object
<CustomObject>
    <fields>
        <fullName>Date_of_Last_Version_Text__c</fullName>
        <label>Date of Last Version Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_of_Last_Version__c</fullName>
        <label>Date of Last Version</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Server_Name__c</fullName>
        <label>Server Name</label>
        <picklist>
            <picklistValues>
                <fullName>CommCareHQ</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>CommCareHQ India</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>description__c</fullName>
        <label>description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>edition__c</fullName>
        <label>edition</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>feature_type__c</fullName>
        <label>feature_type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>id__c</fullName>
        <externalId>true</externalId>
        <label>id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>visibility__c</fullName>
        <defaultValue>&quot;INTERNAL&quot;</defaultValue>
        <label>visibility</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Accounting_Softwareplan</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Accounting_Softwareplans</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>